Bug 1018820 - fix exposure compensation index calculations, r=dhylands